--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="farting.tech">
     <meta property="og:description" content="NVIDIA: the way it's meant to be played">
-    <meta property="og:image" content="https://farting.tech/assets/icon.png">
+    <meta property="og:video" content="https://farting.tech/assets/bg.mp4">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://farting.tech">
     <meta name="twitter:title" content="farting.tech">
