New site design

--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>farting.tech</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="assets/icon.png">
-    <meta property="og:type" content="article">
-    <meta property="og:title" content="farting.tech">
-    <meta property="og:description" content="NVIDIA: the way it's meant to be played">
-    <meta property="og:video" content="https://farting.tech/assets/bg.mp4">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://farting.tech">
-    <meta name="twitter:title" content="farting.tech">
-    <meta name="twitter:description" content="NVIDIA: the way it's meant to be played">
-    <meta name="twitter:image" content="https://farting.tech/assets/icon.png">
-</head>
-<body>
-
-<video autoplay muted loop id="bgVideo">
-<source src="assets/bg.mp4" type="video/mp4">
-</video>
-
-</body>
+    <head>
+        <title>farting.tech - Farting around the web since 2020!</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="center">
+            <h1><a href="https://farting.tech/assets/fart.mp4">farting.tech</a></h1>
+            <h4>Farting around the web since 2020!</h4>
+            <video controls src="assets/fart.mp4"></video>
+            <br>
+            <a href="https://farting.tech/partners">Partners</a> - <a href="https://farting.tech/privacy-policy">Privacy Policy</a>
+        </div>
+    </body>
 </html>
