--- a/partners.html
+++ b/partners.html
@@ -8,7 +8,7 @@
         <div class="center">
             <h1><a href="https://farting.tech">farting.tech</a> Partners</h1>
             <h4>These sites and services are recommended and fart-ready!</h4>
-            <a href="https://kaisershare.xyz">Kaisershare</a> - <a href="http://hxper.tk">Hxper</a>
+            <a href="https://kaisershare.xyz">KaiserShare</a> - <a href="http://hxper.tk">Hxper</a>
         </div>
     </body>
 </html>
