--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
             <br>
             <a href="https://farting.tech/partners">Partners</a> - <a href="https://farting.tech/privacy-policy">Privacy Policy</a>
         </div>
+        <a class="masto" rel="me" href="https://mas.to/@jordiisepic">Mastodon</a>
     </body>
 </html>
