original farting.tech

--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="center">
-            <h1><a href="https://farting.tech/assets/fart.mp4">farting.tech</a></h1>
-            <h4>Farting around the web since 2020!</h4>
-            <video controls src="assets/fart.mp4"></video>
-            <br>
-            <a href="https://farting.tech/partners">Partners</a> - <a href="https://farting.tech/privacy-policy">Privacy Policy</a>
-        </div>
+        <video autoplay muted loop id="myVideo">
+            <source src="assets/fart.mp4" type="video/mp4">
+        </video>          
     </body>
 </html>
