--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>farting.tech - Farting around the web since 2020!</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <video autoplay muted loop id="myVideo">
-            <source src="assets/fart.mp4" type="video/mp4">
+        <video autoplay muted loop>
+            <source src="bg.mp4" type="video/mp4">
         </video>          
     </body>
 </html>
