add just the video file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>farting.tech - Farting around the web since 2020!</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <video autoplay muted loop>
-            <source src="bg.mp4" type="video/mp4">
-        </video>          
-    </body>
-</html>
+<meta http-equiv="refresh" content="0; URL=https://farting.tech/fart.mp4">
