--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <meta http-equiv="refresh" content="0; URL=https://farting.tech/fart.mp4">
+<meta property="og:title" content="farting.tech - Farting around the web since 2020!">
+<meta property="og:url" content="https://farting.tech">
+<meta property="og:video" content="https://farting.tech/fart.mp4">
+<meta property="og:video:secure_url" content="https://farting.tech/fart.mp4">
+<meta property="og:video:type" content="video/mp4">
