--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <meta http-equiv="refresh" content="0; URL=https://farting.tech/fart.mp4">
-<meta property="og:type" content="movie">
-<meta property="og:title" content="farting.tech">
-<meta property="og:description" content="Farting around the web 2020!">
-<meta property="og:url" content="https://farting.tech">
 <meta property="og:video" content="https://farting.tech/fart.mp4">
 <meta property="og:video:type" content="application/x-shockwave-flash">
 <meta property="og:video" content="https://farting.tech/fart.mp4">
 <meta property="og:video:type" content="video/mp4">
+<meta property="og:type" content="video.other">
